# POO-Laborator

./: CMakeLists.txt  DepasireCantitate.cpp  DepasireCantitate.h  DepasireCantitateDorita.cpp  DepasireCantitateDorita.h  Fructe.cpp  Fructe.h  Lactate.cpp  Lactate.h  Legume.cpp  Legume.h  ListaDepozit.cpp  ListaDepozit.h  NiciunProdus.cpp  NiciunProdus.h  ProductType.h  Produs.cpp  Produs.h  README.md  bacanie.cpp  bacanie.h  diagrama-produse.drawio  main.cpp  tastatura.txt
Tema Laborator1/: CMakeLists.txt  main.cpp
