cmake_minimum_required(VERSION 3.24.2)
project(Tema_2)

set(CMAKE_CXX_STANDARD 17)


add_executable(Tema_2 main.cpp Produs.cpp Produs.h Lactate.cpp Lactate.h bacanie.cpp bacanie.h Legume.cpp Legume.h ListaDepozit.h  ListaDepozit.cpp Fructe.cpp Fructe.h DepasireCantitateDorita.h  NiciunProdus.cpp NiciunProdus.h DepasireCantitate.h DepasireCantitate.cpp DepasireCantitateDorita.cpp tastatura.txt)
